// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-iRbamj haKVn"
  >
    <div
      class="sc-jlyJG BhUgo"
    >
      <div
        class="sc-gipzik kHjkVX"
      >
        <div
          class="sc-hzDkRC sc-fBuWsC cYZDLQ"
        >
          ERROR
        </div>
        <h4
          class="sc-caSCKo hpQWFC"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-csuQGl CQhxV"
      >
        <pre
          class="sc-kjoXOD gsPFCE"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-bRBYWo iQZrSt"
      >
        <a
          class="sc-Rmtcm fGSwOY"
        >
          <i
            class="sc-hMFtBS yUeIe fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-iRbamj haKVn"
  >
    <div
      class="sc-jlyJG BhUgo"
    >
      <div
        class="sc-gipzik kHjkVX"
      >
        <div
          class="sc-hzDkRC sc-fBuWsC cYZDLQ"
        >
          ERROR
        </div>
        <h4
          class="sc-caSCKo hpQWFC"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-csuQGl CQhxV"
      >
        <pre
          class="sc-kjoXOD gsPFCE"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
